# Arcade

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
Core/DLLoader/include/: DLLoader.hpp
Core/DLLoader/src/: DLLoader.cpp
Core/Menu/include/: Menu.hpp
Core/Menu/src/: Menu.cpp
Core/include/: Arcade.hpp  Handler.hpp
Core/src/: Arcade.cpp  Handler.cpp  main.cpp
Display/NCurses/include/: NCurses.hpp  NCursesClock.hpp  NCursesEvent.hpp  NCursesException.hpp  NCursesFactory.hpp  NCursesFont.hpp  NCursesIntRect.hpp  NCursesRenderer.hpp  NCursesSprite.hpp  NCursesText.hpp  NCursesTexture.hpp  NCursesVector2f.hpp  NCursesWindow.hpp
Display/NCurses/src/: NCurses.cpp  NCursesClock.cpp  NCursesEvent.cpp  NCursesException.cpp  NCursesFactory.cpp  NCursesFont.cpp  NCursesIntRect.cpp  NCursesRenderer.cpp  NCursesSprite.cpp  NCursesText.cpp  NCursesTexture.cpp  NCursesVector2f.cpp  NCursesWindow.cpp
Display/SDL2/include/: SDL2.hpp  SDL2Clock.hpp  SDL2Event.hpp  SDL2Exception.hpp  SDL2Factory.hpp  SDL2Font.hpp  SDL2IntRect.hpp  SDL2Renderer.hpp  SDL2Sprite.hpp  SDL2Text.hpp  SDL2Texture.hpp  SDL2Vector2f.hpp  SDL2Window.hpp
Display/SDL2/src/: SDL2.cpp  SDL2Clock.cpp  SDL2Event.cpp  SDL2Exception.cpp  SDL2Factory.cpp  SDL2Font.cpp  SDL2IntRect.cpp  SDL2Renderer.cpp  SDL2Sprite.cpp  SDL2Text.cpp  SDL2Texture.cpp  SDL2Vector2f.cpp  SDL2Window.cpp
Display/SFML/include/: SFML.hpp  SFMLClock.hpp  SFMLEvent.hpp  SFMLException.hpp  SFMLFactory.hpp  SFMLFont.hpp  SFMLIntRect.hpp  SFMLRenderer.hpp  SFMLSprite.hpp  SFMLText.hpp  SFMLTexture.hpp  SFMLVector2f.hpp  SFMLWindow.hpp
Display/SFML/src/: SFML.cpp  SFMLClock.cpp  SFMLEvent.cpp  SFMLException.cpp  SFMLFactory.cpp  SFMLFont.cpp  SFMLIntRect.cpp  SFMLRenderer.cpp  SFMLSprite.cpp  SFMLText.cpp  SFMLTexture.cpp  SFMLVector2f.cpp  SFMLWindow.cpp
Display/Sprite/include/: ISprite.hpp
Display/Window/NCurses/include/: NCursesWindow.hpp
Display/Window/NCurses/src/: NCursesWindow.cpp
Display/Window/include/: IWindow.hpp
Display/include/: Color.hpp  Event.hpp  IClock.hpp  IDisplayModule.hpp  IEvent.hpp  IException.hpp  IFactory.hpp  IFont.hpp  IIntRect.hpp  IRenderer.hpp  ISprite.hpp  IText.hpp  ITexture.hpp  IVector2f.hpp  IWindow.hpp  IntRect.hpp  Vector2f.hpp
Game/Centipede/include/: Centipede.hpp
Game/Centipede/src/: Centipede.cpp
Game/Snake/include/: Snake.hpp
Game/Snake/src/: Snake.cpp
Game/include/: AGameObject.hpp  IColor.h  IGameModule.hpp  IGameObject.hpp  ISprite.h  ITexture.hpp  Printable.hpp
Game/src/: AGameObject.cpp  Printable.cpp
doc/: arcade-documentation.txt
include/: Arcade.hpp  IDisplayModule.hpp  IGameModule.hpp
src/: Arcade.cpp  main.cpp
